round4png final version, tsModal spacing fixed

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -31,9 +31,9 @@
   border-radius: 20%;
 }
 @mixin gridplus {
-  background-color: black;
+  grid-area: 1/1/2/7;
+  display:flex;
+  height: 100%;
+  padding: 5% 10px; 
   grid-row: span 1;
-  border-bottom:#ffffff 3px ridge;
-  //grid-row: span 2;
-  
 }
