--- a/scss/_roundset.scss
+++ b/scss/_roundset.scss
@@ -39,9 +39,9 @@
     justify-content:center;    
 }
 .scoreModal {   
-    border:#ffffff 5px ridge;
+    border:white 5px ridge;
     padding: 10px 20px;
-    margin: 5px 20px;    
+    margin: 2% 40px;    
     display: flex;
     align-items: center;   
     flex-direction: row;
@@ -72,14 +72,14 @@
 } 
 .scoreCap {
     @include gridplus;
-    grid-area: 1/1/2/7;
-    display:flex;
-    height: 100%;
-    padding: 5% 10px; 
+    border-bottom:#ffffff 3px ridge;
     background-color: black;
 }
+.scoreCap2 {
+    @include gridplus;
+}
 .quarter1, .quarter2, .quarter3, .quarter4, 
-.pScore0,.pScore1, .pScore2, .pScore3, .pScore4 {
+.pScore1, .pScore2, .pScore3, .pScore4 {
     display:flex;
     flex-basis:16%;
     justify-content: space-around;
@@ -89,11 +89,14 @@
     flex-basis:20%;
     justify-content: space-evenly;
 }
+.quarter {
+    transform: translate(-40px, 0px);
+}
 .pScores {
     display:flex;
     flex-direction: row;
-    justify-content: space-around;
-    padding: 5% 10px; 
+   
+    padding: 5% 0px; 
 }
 .headings {
     display: flex;
